<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/text_SignInScreen"
            android:textColor="#2B70A8"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_email"
                    android:textSize="10sp"
                    android:textColor="#2B70A8"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="50dp" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:padding="10dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:textColor="#FFFFFF"
                    android:hint="@string/text_hint_email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pass"
                    android:textSize="10sp"
                    android:textColor="#2B70A8"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:padding="10dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#FFFFFF"
                    android:hint="@string/text_hint_pass"
                    android:inputType="textPassword"
                    tools:ignore="WearPasswordInput" />

                <Button
                    android:id="@+id/button_enter"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_sign"
                    android:text="@string/text_btn_enter"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp" />

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>