<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:scrollbars="vertical"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/back_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_new"
            android:textColor="#1E90FF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/witcher_fon"
                android:contentDescription="@string/text_des_witcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_des_witcher"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_gravity="bottom|start"
                android:padding="16dp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/stop_fon"
                android:contentDescription="@string/text_des_play" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/jones_fon"
                android:contentDescription="@string/text_des_jessica_jones" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_des_jessica_jones"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_gravity="bottom|start"
                android:padding="16dp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/stop_fon"
                android:contentDescription="@string/text_des_play" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/magicians_fon"
                android:contentDescription="@string/text_des_magicians" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_des_magicians"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_gravity="bottom|start"
                android:padding="16dp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/stop_fon"
                android:contentDescription="@string/text_des_play" />
        </FrameLayout>


    </LinearLayout>






</ScrollView>